k8s/manifests/nginx-no-ingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: nginx
  name: nginx
  namespace: default

spec:
  selector:
    matchLabels:
      app: nginx

  replicas: 1

  template:
    metadata:
      labels:
        app: nginx

    spec:
      hostAliases:
      - ip: "192.168.1.200"
        hostnames:
        - "meteo.local"
        - "meteo"

      containers:
      - name: nginx
        image: nginx:1.16.1
        ports:
        - containerPort: 80

        volumeMounts:
        - name: ws-code
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: apps/nginx/nginx.conf
          readOnly: true

        - name: ws-code
          mountPath: /usr/share/nginx/html
          subPath: html
          readOnly: true

        - name: ssl-certs
          mountPath: /etc/letsencrypt
          readOnly: true

        - name: ws-shared
          mountPath: /www/stations
          subPath: stations
          readOnly: true

        - name: ws-shared
          mountPath: /www/webcam
          subPath: webcam
          readOnly: true

        - name: ws-shared
          mountPath: /www/webshot
          subPath: webshot
          readOnly: true

        - name: ws-shared
          mountPath: /www/downloader
          subPath: downloader
          readOnly: true

        - name: tz-config
          mountPath: /etc/localtime
          readOnly: true

      volumes:
      - name: ws-code
        persistentVolumeClaim:
            claimName: ws-code-claim

      - name: ws-shared
        persistentVolumeClaim:
            claimName: ws-shared-claim

      - name: ssl-certs
        hostPath:
          path: /home/pi/secrets/letsencrypt
          type: Directory

      - name: tz-config
        hostPath:
          path: /usr/share/zoneinfo/Europe/Rome
          type: File

---
#
# NOTE: this requires:
# minikube start --extra-config=apiserver.service-node-port-range=1-65535
#
apiVersion: v1
kind: Service

metadata:
  name: nginx

spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
  # "targetPort" is the port used by the container process, to listen to connections inside the container.
  - port: 80
    name: http
    # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767).
    # This range is overridden with the --service-node-port-range flag passed to the k8s control plane (see minikube note above).
    # "nodePort" exposes the Service on each Node's IP at a static port (the NodePort).
    # A ClusterIP Service, to which the NodePort Service routes, is automatically created.
    # You'll be able to contact the NodePort Service, from outside the cluster, by requesting <NodeIP>:<NodePort>.
    nodePort: 80

  - port: 443
    name: https
    nodePort: 443
