k8s/manifests/prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app: prometheus
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/component: prometheus
spec:
  ports:
    # Exposes `http` and `TCP` ports `9090` using the default `ClusterIP` Service type
    - name: http
      port: 9090
      protocol: TCP
      targetPort: 9090
  # Ensures clients are routed to the same Prometheus Pod, which is necessary to get consistent dashboards in a highly-available setup.
  # To learn more about Prometheus high availability,
  # consult https://github.com/coreos/prometheus-operator/blob/master/Documentation/high-availability.md#prometheus
  sessionAffinity: ClientIP
  selector:
    app: prometheus
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
  labels: &Labels
    app: prometheus
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/component: prometheus
spec:
  serviceName: prometheus
  replicas: 1
  #podManagementPolicy: "Parallel"
  #updateStrategy:
  #  type: "RollingUpdate"
  selector:
    matchLabels: *Labels
  template:
    metadata:
      labels: *Labels
    spec:
      # `chown` the Prometheus  `/data` directory so that Prometheus can write to it
      containers:
        - name: prometheus-server
          image: quay.io/prometheus/prometheus:latest
          imagePullPolicy: IfNotPresent
          args:
            - --config.file=/etc/config/prometheus.yaml
            - --storage.tsdb.path=/data
            # Serve under a sub-path via a reverse proxy: NOTE: you need to update the probes paths too
            #- --web.external-url=/prometheus/
          ports:
            - containerPort: 9090
          # Probe the `/-/ready` and `/-/healthy` endpoints
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9090
            initialDelaySeconds: 30
            timeoutSeconds: 30
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9090
            initialDelaySeconds: 30
            timeoutSeconds: 30
          # Based on 10 running nodes with 30 pods each
          # Resource requests of `200m` of CPU and `1000Mi` of memory
          #resources:
          #  requests:
          #    cpu: 200m
          #    memory: 1000Mi
          volumeMounts:
            - name: config-file
              mountPath: /etc/config/prometheus.yaml
              subPath: prometheus.yaml
            - name: prometheus-data
              mountPath: /data
      terminationGracePeriodSeconds: 300
      volumes:
        # The Prometheus ConfigMap is mounted into the Pods as a volume at `/etc/config`
        - name: config-file
          configMap:
            name: prometheus-config
        - name: prometheus-data
          persistentVolumeClaim:
            claimName: prometheus-data-claim
